[gd_scene load_steps=2 format=3 uid="uid://cbuo20hqjh6p2"]

[ext_resource type="Script" uid="uid://ddu36beeak837" path="res://Scripts/winlose.gd" id="1_3vusp"]

[node name="Win" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3vusp")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.18538326, 0.18538326, 0.18538326, 1)

[node name="6am" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -202.0
offset_right = 184.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 96
text = "6:00 AM"

[node name="YouWin" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.0
offset_top = -90.0
offset_right = 212.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 96
text = "YOU WIN"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 196.0
offset_top = -200.0
offset_right = -196.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 114

[node name="MainMenu" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Main Menu"

[node name="Exit" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Exit"

[connection signal="pressed" from="HBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/Exit" to="." method="_on_exit_pressed"]
